# Just_Fetch

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/: dependabot.yml
.github/workflows/: build.yml  build.yml.bak  labeler.yml  release.yml  rust.yml
src/: main.rs  print.rs  stats.rs
