[package]
name = "jfetch"
version = "0.0.7"
edition = "2021"

description = "Simple command-line system information tool written tool like neofetch but in rust 🦀"
documentation = "https://github.com/Aviksaikat/Just_Fetch#-just-fetch-jfetch-"
readme = "README.md"
homepage = "https://github.com/Aviksaikat/Just_Fetch"
repository = "https://github.com/Aviksaikat/Just_Fetch"
license-file = "LICENSE"
keywords = ["fetch", "screenfetch", "rust", "cargo", "cross-paltform"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
# nix = "0.29.0"
rand = "0.8.5"
sysinfo = "0.30.12"
systemstat = "0.2.3"
tabled = "0.15.0"

